# macro_data_factory

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: oecd.yml  world_bank.yml
docs/: architecture.md  metadata.md
src/macro_data_factory/: __init__.py  cli.py
src/macro_data_factory/commands/: oecd.py
src/macro_data_factory/config/: oecd.py  world_bank.py
src/macro_data_factory/processing/: oecd.py  world_bank.py
src/macro_data_factory/products/: annual_macro_panel.py
src/macro_data_factory/providers/: oecd.py  world_bank.py
src/macro_data_factory/validation/: annual_macro_panel.py  oecd.py  world_bank.py
tests/: test_annual_macro_panel.py  test_oecd_config.py  test_oecd_processing.py  test_oecd_provider.py  test_oecd_validation.py  test_world_bank_config.py  test_world_bank_processing.py  test_world_bank_validation.py
