[project]
name = "macro-data-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Golib Sanaev", email = "gsanaev80@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
macro-data-factory = "macro_data_factory:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
